# flash-card-thingy

./: Cargo.toml
src/: card.rs  deck.rs  main.rs  note.rs  progress.rs  session.rs
